# sdgft-ml-toolkit

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
checkpoints/ensemble/member_0/: best_model.pt  norms.npz
checkpoints/ensemble/member_1/: best_model.pt  norms.npz
checkpoints/ensemble/member_2/: best_model.pt  norms.npz
checkpoints/ensemble/member_3/: best_model.pt  norms.npz
checkpoints/ensemble/member_4/: best_model.pt  norms.npz
checkpoints/inverter/: best_inverter.pt
data/: download_oracle.py  download_sparc.py
docs/: architecture.md  experimental_data.md  oracle_schema.md
docs/wiki/: 01_what_is_sdgft.md  02_parameters.md  03_dimensional_flow.md  04_observable_chain.md  05_experimental_validation.md  06_gnn_surrogate.md  07_cvae_inverter.md  08_oracle_database.md  09_installation.md  10_api_reference.md  11_atomic_qed.md  12_neutrino_physics.md  13_black_holes.md  14_galaxy_rotation.md  15_collider_gauge.md  README.md
notebooks/: 00_quickstart.ipynb  01_oracle_queries.ipynb  02_parameter_landscape.ipynb  03_experimental_validation.ipynb  04_predictions_frontier.ipynb  05_inverse_problem.ipynb  06_atomic_qed_neutrino.ipynb  07_black_holes_compact.ipynb  08_galaxy_rotation.ipynb  09_collider_signatures.ipynb  10_rg_gauge_unification.ipynb
src/sdgft_ml/: __init__.py
tests/: test_consistency.py  test_physics_atomic_qed.py  test_physics_black_holes.py  test_physics_collider.py  test_physics_constants.py  test_physics_dimension.py  test_physics_galaxy.py  test_physics_gauge_groups.py  test_physics_neutrino.py  test_physics_rg_running.py
(+22 files in other folders)
