[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdgft-ml-toolkit"
version = "1.0.0"
description = "Inference, querying & exploration toolkit for Six-Dimensional Geometric Field Theory (SDGFT)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "David A. Besemer" },
]
keywords = [
    "theoretical physics",
    "graph neural networks",
    "cosmology",
    "particle physics",
    "surrogate model",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.4",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyarrow>=12.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]
jupyter = ["jupyterlab>=4.0", "ipywidgets>=8.0"]
duckdb = ["duckdb>=0.9"]

[project.urls]
Homepage = "https://github.com/cosmologicmind/sdgft-ml-toolkit"
Repository = "https://github.com/cosmologicmind/sdgft-ml-toolkit"
Documentation = "https://github.com/cosmologicmind/sdgft-ml-toolkit/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/sdgft_ml"]

[tool.ruff]
line-length = 100
target-version = "py310"
